--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,14 @@
+[project]
+requires-python = ">=3.6"
+
 [build-system]
-requires = ["cython", "numpy", "scipy", "setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
+# We need at least 1.19.0 for ABI compatibility, but otherwise prefer the oldest available wheel (eg: 1.19.3 for py3.9)
+requires = [
+    "numpy==1.19.0; python_version<'3.9'",
+    "numpy==1.21.6; python_version=='3.9'",
+    "numpy==1.21.6; python_version=='3.10'",
+    "numpy; python_version>'3.10'",
+    "setuptools",
+    "wheel"
+]
